[package]
name = "evm-trace-extract"
version = "0.1.0"
authors = ["Thegaram <th307q@gmail.com>"]
edition = "2018"

[lib]
name = "common"
path = "src/common/lib.rs"

[[bin]]
name = "dep-graph"
path = "src/dep-graph/main.rs"

[[bin]]
name = "evm-trace-extract"
path = "src/evm-trace-extract/main.rs"

[[bin]]
name = "rpc-to-disk"
path = "src/rpc-to-disk/main.rs"

[dependencies]
env_logger = "0.8.1"
futures = "0.3.5"
lazy_static = "1.4.0"
log = "0.4.11"
regex = "1"
rmp-serde = "0.14.4"
rocksdb = "0.15.0"
serde_json = "1.0.57"
tokio = "0.2.22"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }

[dev-dependencies]
serial_test = "0.5.0"